{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 1186,
  "lineage": "9b43f92b-c54b-0dc4-dab4-bc40c509279f",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-aws-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:457832530154:loadbalancer/app/my-alb/24dd56b84f76f1c3",
            "arn_suffix": "app/my-alb/24dd56b84f76f1c3",
            "dns_name": "my-alb-1673122002.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:457832530154:loadbalancer/app/my-alb/24dd56b84f76f1c3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "security_groups": [
              "sg-0aaab4254b79897be"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032092392c1728798"
              },
              {
                "subnet_id": "subnet-070d6567fb7f4caf9"
              }
            ],
            "subnets": [
              "subnet-032092392c1728798",
              "subnet-070d6567fb7f4caf9"
            ],
            "tags": {
              "Name": "My-ALB"
            },
            "vpc_id": "vpc-0dc5a02a67b8728ab",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.vpc.aws_security_group.web-sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my-test-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:457832530154:listener/app/my-alb/24dd56b84f76f1c3/5389c8b4fb2de770",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:457832530154:targetgroup/ALB-tg/1d3cc0ea941db994",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:457832530154:listener/app/my-alb/24dd56b84f76f1c3/5389c8b4fb2de770",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:457832530154:loadbalancer/app/my-alb/24dd56b84f76f1c3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.my-aws-alb",
            "module.alb.aws_lb_target_group.my-target-group",
            "module.vpc.aws_security_group.web-sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:457832530154:targetgroup/ALB-tg/1d3cc0ea941db994",
            "arn_suffix": "targetgroup/ALB-tg/1d3cc0ea941db994",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:457832530154:targetgroup/ALB-tg/1d3cc0ea941db994",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc5a02a67b8728ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-099b42e192e231dde",
            "id": "rtb-099b42e192e231dde",
            "owner_id": "457832530154",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "My-Private-RT"
            },
            "vpc_id": "vpc-0dc5a02a67b8728ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:457832530154:internet-gateway/igw-0cccef6d6880930b2",
            "id": "igw-0cccef6d6880930b2",
            "owner_id": "457832530154",
            "tags": {
              "Name": "My-IGW"
            },
            "vpc_id": "vpc-0dc5a02a67b8728ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-026b3ef5195637612",
            "owner_id": "457832530154",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cccef6d6880930b2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My-Public-RT"
            },
            "vpc_id": "vpc-0dc5a02a67b8728ab"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13906ee26b610d3",
            "route_table_id": "rtb-099b42e192e231dde",
            "subnet_id": "subnet-07d8460c6f3ca669c"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09175293ba76f2ab8",
            "route_table_id": "rtb-099b42e192e231dde",
            "subnet_id": "subnet-0cb64134adf81b674"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d28c8cc2b25dc95",
            "route_table_id": "rtb-026b3ef5195637612",
            "subnet_id": "subnet-070d6567fb7f4caf9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fae5bed7c0ab7e3b",
            "route_table_id": "rtb-026b3ef5195637612",
            "subnet_id": "subnet-032092392c1728798"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:457832530154:security-group/sg-0aaab4254b79897be",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aaab4254b79897be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_WebTraffic",
            "name_prefix": "",
            "owner_id": "457832530154",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-DMZ"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc5a02a67b8728ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:457832530154:subnet/subnet-07d8460c6f3ca669c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07d8460c6f3ca669c",
            "map_public_ip_on_launch": false,
            "owner_id": "457832530154",
            "tags": {
              "Name": "Private-Subnet 1"
            },
            "vpc_id": "vpc-0dc5a02a67b8728ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:457832530154:subnet/subnet-0cb64134adf81b674",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0cb64134adf81b674",
            "map_public_ip_on_launch": false,
            "owner_id": "457832530154",
            "tags": {
              "Name": "Private-Subnet 2"
            },
            "vpc_id": "vpc-0dc5a02a67b8728ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:457832530154:subnet/subnet-070d6567fb7f4caf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-070d6567fb7f4caf9",
            "map_public_ip_on_launch": true,
            "owner_id": "457832530154",
            "tags": {
              "Name": "Public-Subnet 1"
            },
            "vpc_id": "vpc-0dc5a02a67b8728ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:457832530154:subnet/subnet-032092392c1728798",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-032092392c1728798",
            "map_public_ip_on_launch": true,
            "owner_id": "457832530154",
            "tags": {
              "Name": "Public-Subnet 2"
            },
            "vpc_id": "vpc-0dc5a02a67b8728ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:457832530154:vpc/vpc-0dc5a02a67b8728ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af686feb40ba0d72",
            "default_route_table_id": "rtb-099b42e192e231dde",
            "default_security_group_id": "sg-032ae9fc7714bb251",
            "dhcp_options_id": "dopt-49ac2c22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dc5a02a67b8728ab",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-099b42e192e231dde",
            "owner_id": "457832530154",
            "tags": {
              "Name": "My-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}